--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ anyhow = "1.0.86"
 askama = "0.12.1"
 axum = "0.7.5"
 thiserror = "1.0.61"
-tokio = "1.38.0"
+tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
 tower = "0.4.13"
-tower-http = "0.5.2"
+tower-http = { version = "0.5.2", features = ["fs"] }
